# documentation-hub

./: .gitignore  .gitmodules  404.html  DOCUMENTATION_TEMPLATE.md  README.md  index.html  index.md  mkdocs.yml  mkdocs_new.yaml  mkdocs_new.yml  mkdocs_old.yml  sitemap.xml
.history/: mkdocs_20201106204305.yml  mkdocs_20201106211519.yml  mkdocs_20201106211542.yml  mkdocs_20201106211626.yml  mkdocs_20201106211930.yml  mkdocs_20201106212844.yml
AEXs/: index.html
DOCUMENTATION_TEMPLATE/: index.html
Expansions/: index.html
aepp-sophia-examples/: index.html
aesophia/: index.html
aetmodel/: index.html
developer-tools/aepp-middleware/: Cargo.toml  LICENSE.txt  Makefile  Rocket.toml  docker-compose.yml  index.html
developer-tools/aepp-middleware/CHANGELOG/: index.html
developer-tools/aepp-middleware/docs/middleware-guide/: index.html
developer-tools/aepp-middleware/frontend/: Makefile  index.html
developer-tools/aepp-middleware/frontend/LICENSE/: index.html
developer-tools/aepp-middleware/frontend/assets/: index.html
developer-tools/aepp-middleware/frontend/components/logo/: index.vue
developer-tools/aepp-middleware/frontend/layouts/: index.html
developer-tools/aepp-middleware/frontend/middleware/: index.html
developer-tools/aepp-middleware/frontend/pages/: index.html
developer-tools/aepp-middleware/frontend/pages/channels/_transactions/: _id.vue
developer-tools/aepp-middleware/frontend/pages/faucet/: index.vue
developer-tools/aepp-middleware/frontend/pages/generations/_generation/: index.vue
developer-tools/aepp-middleware/frontend/partials/transactionDetails/: index.vue
developer-tools/aepp-middleware/frontend/static/: index.html
developer-tools/aepp-middleware/frontend/store/: names.js
developer-tools/aepp-middleware/migrations/2019-04-09-072818_create_names/: down.sql
developer-tools/aepp-middleware/migrations/2019-04-10-094428_create_contract_calls/: down.sql  up.sql
developer-tools/aepp-middleware/migrations/2019-05-16-092931_add-function-return-value/: down.sql  up.sql
developer-tools/aepp-middleware/migrations/2019-06-26-111126_update_names/: down.sql
developer-tools/aepp-middleware/migrations/2019-07-22-135949_correct-names-table/: down.sql  up.sql
developer-tools/aepp-middleware/migrations/2019-08-07-084524_add_base64_encoded_tx/: up.sql
developer-tools/aepp-middleware/migrations/2019-08-12-063138_update_tx_signature_column/: up.sql
developer-tools/aepp-middleware/migrations/2019-08-14-101340_more_transactions_tx_indices/: down.sql
developer-tools/aepp-middleware/migrations/2019-09-04-124457_better-indexes-transactions-and-names/: down.sql  up.sql
developer-tools/aepp-middleware/scripts/: mdw-loader.service  release.sh
developer-tools/aepp-middleware/src/: hashing.rs  models.rs  node.rs  server.rs  websocket.rs
developer-tools/middleware/aepp-middleware/: Cargo.toml  docker-compose.yml
developer-tools/middleware/aepp-middleware/CHANGELOG/: index.html
developer-tools/middleware/aepp-middleware/docker/: Rocket.toml  schema.sql
developer-tools/middleware/aepp-middleware/migrations/2018-06-28-132749_create_key_blocks/: down.sql~  up.sql~
developer-tools/middleware/aepp-middleware/migrations/2018-11-13-124222_create_micro_blocks/: up.sql  up.sql~
developer-tools/middleware/aepp-middleware/migrations/2019-02-25-134849_contract_identifiers/: down.sql  up.sql
developer-tools/middleware/aepp-middleware/scripts/: db.sql~
developer-tools/middleware/aepp-middleware/src/: coinbase.rs  main.rs  models.rs  websocket.rs
developer-tools/middleware/aepp-middleware/test/keys/: testkey  testkey.pub
(+1699 files in other folders)
