[package]
name = "aepp-middleware"
version = "0.9.2"
authors = ["John Newby <@johnsnewby>", "Shubhendu Shekhar <@shekhar-shubhendu>", "Andrea Giacobino <@noandrea>" ]

[lib]
name = "aepp_middleware"
path = "src/lib.rs"

[[bin]]
name = "mdw"
path = "src/main.rs"

[features]
client = [ ]

[dependencies]
assert-json-diff = "1.0.0"
backtrace = "0.2"
base58 = "0.1.0"
base58check = "0.0.1"
base64 = "0.10.1"
bigdecimal = { version = "0.0.14", features = ["serde",] }
blake2 = "0.8.0"
blake2b = "0.7.0"
byteorder = "1.2.7"
chashmap = "2.2.0"
chrono = "0.4.6"
clap = "~2.32"
curl = "0.4.19"
daemonize = "*"
diesel = { version = "1.4.2", features = ["postgres", "numeric", "serde_json", "r2d2",  ] }
diesel_migrations = "1.4.0"
dotenv = "0.13.0"
env_logger = "0.6.0"
error-chain = "0.11"
flexi_logger = "0.11.5"
futures = "0.1"
hex = "0.3.2"
hyper-tls = {version = "0.1.2", optional = true}
itertools = "0.7.8"
lazy_static = "0.2"
log = "0.4.6"
mime = "0.3.3"
native-tls = {version = "0.2.2", optional = true}
openssl = {version = "0.10.15", optional = true}
percent-encoding = {version = "1.0.0", optional = true}
postgres = {version = "0.15.2", features = ["with-chrono", "with-serde_json"] }
r2d2 = "*"
r2d2-diesel = "*"
r2d2_postgres = "0.14.0"
rand = "^0.5.1"
regex = "1.0"
reqwest = "0.9.14"
rocket = "0.4.2"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", tag = "v0.5.0-beta-1" }
rust-base58 = "*"
rust-crypto = "^0.2"
rust_decimal = { version = "0.11.1", features = ["postgres", "serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = {version = "1.0.22", features=["arbitrary_precision"]}
serde-xml-rs = {git = "git://github.com/Metaswitch/serde-xml-rs.git" , branch = "master", optional = true}
sha2 = "*"
ws = "0.7.9"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "json"]
