[package]
name = "aepp-middleware"
version = "0.4.0"
authors = ["John Newby <john@newby.org>"]

[features]
client = [ ]

[dependencies]
futures = "0.1"
backtrace = "0.2"
chashmap = "2.2.0"
chrono = "0.4.6"
clap = "~2.32"
curl = "0.4.19"
hex = "0.3.2"
hyper-tls = {version = "0.1.2", optional = true}
lazy_static = "0.2"
log = "0.4.6"
env_logger = "0.6.0"
mime = "0.3.3"
native-tls = {version = "0.2.2", optional = true}
openssl = {version = "0.10.15", optional = true}
percent-encoding = {version = "1.0.0", optional = true}
postgres = {version = "0.15.2", features = ["with-chrono", "with-serde_json"] }
r2d2 = "*"
r2d2-diesel = "*"
r2d2_postgres = "0.14.0"
rand = "^0.5.1"
regex = "1.0"
rocket = "0.4"
rocket_cors = "0.4.0"
rust-base58 = "*"
rust-crypto = "^0.2"
rust_decimal = { version = "0.11.1", features = ["postgres", "serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_ignored = {version = "0.0.4"}
serde_json = {version = "1.0.22", features=["arbitrary_precision"]}
serde-xml-rs = {git = "git://github.com/Metaswitch/serde-xml-rs.git" , branch = "master", optional = true}
error-chain = "0.11"
diesel = { version = "1.3.3", features = ["postgres", "numeric", "serde_json", "r2d2",  ] }
dotenv = "0.13.0"
bigdecimal = "0.0.14"
ws = "0.7.9"
itertools = "0.7.8"
tokio-core = "0.1.17"
reqwest = "0.9.14"
base58="0.1.0"
base58check = "0.0.1"
blake2b = "0.7.0"
blake2 = "0.8.0"
blake2-rfc = "0.2.18"
byteorder = "1.2.7"
sha2 = "*"



[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["diesel_postgres_pool", "json"]